# kilojoule

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  main.py  pyproject.toml  todo.md
.github/workflows/: test.yml
kilojoule_rust/: .gitignore  Cargo.toml
kilojoule_rust/src/: ast_node.rs  ast_node_pool.rs  evaluate.rs  evaluator.rs  lib.rs  lookup_rows.rs  main.rs  obj_pool.rs  parser.rs  parser2.rs  parser_reducers.rs  rule_type.rs  rules.rs  run_repl.rs  token.rs  token_def.rs  token_groups.rs  val.rs
kilojoule_rust/tests/: test_parse_and_eval.rs
scripts/: generate_parser_json.py
src/: ast.py  ast_node.rs  ast_node_pool.rs  byte_vec.rs  evaluate.rs  evaluator.rs  first_use_cache.py  heap_allocator.rs  json_lexer.rs  json_parse_test.rs  lib.rs  lookup_rows.rs  main.rs  object_collector.rs  parser.py  parser.rs  parser_generator.py  parser_generator2.py  parser_generator3.py  reader.rs  ring_buffer.rs  rule_type.rs  rules.rs  run_json_query_expr.py  run_repl.rs  token.rs  token_groups.rs  val.rs
src/evaluator/: eval_fcn.rs  mod.rs
tests/: test_parse_and_eval.rs  test_parser_generator.py  test_parser_generator2.py  test_parser_generator_3.py  test_run_json_query_expr.py
