[package]
name = "kilojoule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kilojoule"
path = "src/main.rs"

[[bin]]
name = "json_parse_test"
path = "src/json_parse_test.rs"

[dependencies]
rustyline = "14.0.0"
base64 = "0.22.1"
serde_json = "1.0.116"
toml = "0.8.13"
csv = "1.3.0"
serde = "1.0.204"
serde_yaml = "0.9.34"
